@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.31 2004/02/10 04:58:08 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.32 2005/01/01 20:35:34 tom_kelly33 Exp $
 
 %define name	mklivecd
 %define version	@MKLIVECDVER@
@@ -16,6 +16,7 @@ URL:		http://livecd.berlios.de/
 Source0:	%{name}-@ARCHIVEVER@.tar.bz2
 Requires:	busybox >= 1:1.00-0.pre4.2mdk, cloop-utils >= 1.02-4mdk
 Requires:	mediacheck, mkisofs, squashfs-tools >= 1.4-0.1mdk
+Requires:	syslinux >= 1.76-15mdk
 BuildRoot:	%{_tmppath}/%{name}-root
 Buildarch:	noarch
 
