@@ -1,7 +1,8 @@
-# $Id: CHANGELOG,v 1.126 2004/12/31 20:23:44 tom_kelly33 Exp $
+# $Id: CHANGELOG,v 1.127 2005/01/01 20:35:34 tom_kelly33 Exp $
 
 * 2004-12-29,30,31
 	[mklivecd]
+	- adjusted step counter for initrd progress
 	- commented out some of TV's patches
 	[hwdetect]
 	- fixed $rawX call (parameter list changed)
